@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Feb-20-2007 patrick     Initial Unicode support for gadget::KeyEvent.
+                        NEW VERSION: 1.1.24
 Jan-30-2007 patrick     Eliminated the need to set GADGET_BASE_DIR on Windows
                         to run applications.
                         NEW VERSION: 1.1.23
